static/css/style.css
body {
    font-family: Arial;
    padding-top: 100px;
}

footer {
    margin-top: 40px;
    padding-top: 40px;
    padding-bottom: 40px;
    border-top: 1px solid #ededed;
    color: white;
    background-color: #3e3f3a;
    
}

 footer a {
            color: lightgrey;
        }


footer a:hover {
            color: #efefef;
        }
        
        
        
/* social media */        
        
.fa {
  padding: 5px;
  font-size: 30px;
  width: 40px;
  height:40px;
  text-align: center;
  text-decoration: none;
  margin: 0px 20px;
  border-radius: 50%;
}

.fa:hover {
    opacity: 0.7;
}

.fa-facebook  {
  
  color: white;
}

.fa-twitter {
  
  color: white;
}

.fa-youtube {
 
  color: white;
}

.fa-instagram {
  
  color: white;
}

.accountform {
    padding-top: 20px;
}


 unvisited link 
a:link {
    color: white;
}

 visited link 
a:visited {
    color: white;
}

 mouse over link 
a:hover {
    color: white;
}

 selected link 
a:active {
    color: gold;
}

/*This is the container in product_detail.html page which holds extra product images */
.project_container{
    max-width: 400px;
    height:auto; 
    display:block;
    float: left;
}
/*This css block will keep image width consisten inside the project container*/
.project_photo img{
    width: 200px;
    margin-left:3px;
}
/*This css overides the bootstrap theme removing the standard border*/
.thumbnail {
    top:20px;
    border: 0px;
    background-color: white;
}

.add-to-cart{
float:right;
}

.edit_button btn btn-success{
    
  float:right; 
  display:hidden;
  
  
    
}

.navbar-brand{
  font-family: 'Orbitron', sans-serif;  
    
} 

/*The large static header image at the top
In the future this will be different for each category */

.amazing_jumbo_pic{
    position:relative;
    height:400px;
    margin-top:-50px;
    margin-left: -33.33%;
    margin-right: -33.33%;
    margin-bottom:30px;
    background-image: url("https://s3.eu-west-3.amazonaws.com/glo-lighting/media/jumbo_pics/lzf-jumbo_pic.jpg");
    

}

.cart{
    margin-left:-10px;
    margin-top:-40px;
    color:grey;
}


/* this the grey band under the large static header image
In the future it will be used to house different filers for each category*/

.filterBar{
    height:40px;
    margin-top:-30px;
    margin-left: -33.33%;
    margin-right: -33.33%;
    margin-bottom:30px;
    background-color:#3e3f3a;
    
 
}




.btn-invisable{
   display:hidden; 
    
    
}

